--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="../resources/css/style.css" />
+    <link rel="stylesheet" href="../static/css/style.css" />
   </head>
   <body>
     <header class="header--main-page">
@@ -146,11 +146,11 @@
       <div class="bottom-line">
         <span class="bottom-line--copy">Copyright &copy; 2018</span>
         <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"><img src="../resources/images/icon-facebook.svg"/></a> <a href="#" class="btn btn--small"><img src="images/icon-instagram.svg"/></a>
+          <a href="#" class="btn btn--small"><img src="../static/images/icon-facebook.svg"/></a> <a href="#" class="btn btn--small"><img src="images/icon-instagram.svg"/></a>
         </div>
       </div>
     </footer>
 
-    <script src="../resources/js/app.js"></script>
+    <script src="../static/js/app.js"></script>
   </body>
 </html>
