--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,10 +56,25 @@
   <h2>Wystarczą 4 proste kroki</h2>
 
   <div class="steps--container">
-    <div th:each="step : ${steps}" class="steps--item">
-      <span th:class="'icon icon--' + ${step.icon}"></span>
-      <h3 th:text="${step.title}">Wybierz rzeczy</h3>
-      <p th:text="${step.description}">ubrania, zabawki, sprzęt i inne</p>
+    <div class="steps--item">
+      <span class="icon icon--hands"></span>
+      <h3>Wybierz rzeczy</h3>
+      <p>ubrania, zabawki, sprzęt i inne</p>
+    </div>
+    <div class="steps--item">
+      <span class="icon icon--arrow"></span>
+      <h3>Spakuj je</h3>
+      <p>skorzystaj z worków na śmieci</p>
+    </div>
+    <div class="steps--item">
+      <span class="icon icon--glasses"></span>
+      <h3>Zdecyduj komu chcesz pomóc</h3>
+      <p>wybierz zaufane miejsce</p>
+    </div>
+    <div class="steps--item">
+      <span class="icon icon--courier"></span>
+      <h3>Zamów kuriera</h3>
+      <p>kurier przyjedzie w dogodnym terminie</p>
     </div>
   </div>
 
