--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
       <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
       <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
       <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-      <li><a th:href="@{/form}" class="btn btn--without-border">Przekaż dary</a></li>
+      <li><a th:href="@{/donations/add}" class="btn btn--without-border">Przekaż dary</a></li>
       <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
     </ul>
   </nav>
@@ -38,13 +38,13 @@
 <section id="stats" class="stats">
   <div class="container container--85">
     <div class="stats--item">
-      <em th:text="${donatedBags}">10</em>
+      <em th:text="${homePageDto.donatedBags}">10</em>
       <h3>Oddanych worków</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
     </div>
 
     <div class="stats--item">
-      <em th:text="${donatedGifts}">5</em>
+      <em th:text="${homePageDto.donatedGifts}"></em>
       <h3>Przekazanych darów</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
     </div>
@@ -98,11 +98,24 @@
     <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
       Możesz sprawdzić czym się zajmują.</p>
 
+<!--    <ul class="help&#45;&#45;slides-items">-->
+<!--      <li th:each="foundationPair : ${foundations}">-->
+<!--        <div th:each="foundation : ${foundationPair}" class="col">-->
+<!--          <div class="title" th:text="${foundation.name}">Fundacja "Dbam o Zdrowie"</div>-->
+<!--          <div class="subtitle" th:text="${foundation.description}">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>-->
+<!--        </div>-->
+<!--      </li>-->
+<!--    </ul>-->
+
     <ul class="help--slides-items">
-      <li th:each="foundationPair : ${foundations}">
-        <div th:each="foundation : ${foundationPair}" class="col">
-          <div class="title" th:text="${foundation.name}">Fundacja "Dbam o Zdrowie"</div>
-          <div class="subtitle" th:text="${foundation.description}">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
+      <li th:each="institutionPair : ${homePageDto.institutionPairs}">
+        <div class="col">
+          <div class="title" th:text="${institutionPair.first.name}">Fundacja "Dbam o Zdrowie"</div>
+          <div class="subtitle" th:text="${institutionPair.first.description}">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
+        </div>
+        <div class="col" th:if="${institutionPair.second != null}">
+          <div class="title" th:text="${institutionPair.second.name}">Fundacja "Dla dzieci"</div>
+          <div class="subtitle" th:text="${institutionPair.second.description}">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
         </div>
       </li>
     </ul>
