--- a/src/main/resources/templates/form_default.html
+++ b/src/main/resources/templates/form_default.html
@@ -88,13 +88,16 @@
 
                 <div class="form-group form-group--checkbox" th:each="category : *{categories}">
                     <label>
-        <span th:field="*{donation.categories}">
-            <input type="checkbox" name="categories" th:value="${category.categoryId}"/>
-            <span class="checkbox"></span>
-        </span>
+                        <input type="checkbox"
+                               name="categories"
+                               th:value="${category.categoryId}"
+                               th:field="*{donation.categories}"
+                        />
+                        <span class="checkbox"></span>
                         <span class="description" th:text="${category.name}"></span>
                     </label>
                 </div>
+
                 <div class="form-group form-group--buttons">
                     <button type="button" class="btn next-step">Dalej</button>
                 </div>
@@ -261,7 +264,8 @@
                 <input type="text" name="name" placeholder="Imię" th:field="*{donationForm.contactForm.name}"/>
             </div>
             <div class="form-group form-group--50">
-                <input type="text" name="surname" placeholder="Nazwisko" th:field="*{donationForm.contactForm.surname}"/>
+                <input type="text" name="surname" placeholder="Nazwisko"
+                       th:field="*{donationForm.contactForm.surname}"/>
             </div>
 
             <div class="form-group">
