Fix for category form step
fixed issue with not selecting category span boxes:
- added custom class for category span: checkbox-custom
- added new css code to handle category span box selecting(yellow highligted)
- updated java script code to correctly get info from form and create summary text

--- a/src/main/resources/templates/form_default.html
+++ b/src/main/resources/templates/form_default.html
@@ -93,7 +93,7 @@
                                th:value="${category.categoryId}"
                                th:field="*{donation.categories}"
                         />
-                        <span class="checkbox"></span>
+                        <span class="checkbox checkbox-custom"></span>
                         <span class="description" th:text="${category.name}"></span>
                     </label>
                 </div>
