--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,41 +27,52 @@
 
 <section class="login-page">
   <h2>Zaloguj się</h2>
-  <form th:action="@{/login}" method="post" th:object="${loginForm}">
-    <div class="form-group">
-      <input type="email" name="email" placeholder="Email" th:field="*{email}" />
-    </div>
-    <div class="form-group">
-      <input type="password" name="password" placeholder="Hasło" th:field="*{password}" />
-      <a th:href="@{/reset-password}" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
-    </div>
+<!--  <form th:action="@{/login}" method="post" th:object="${loginForm}">-->
+<!--    <div class="form-group">-->
+<!--      <input type="email" name="email" placeholder="Email" th:field="*{email}" />-->
+<!--    </div>-->
+<!--    <div class="form-group">-->
+<!--      <input type="password" name="password" placeholder="Hasło" th:field="*{password}" />-->
+<!--      <a th:href="@{/reset-password}" class="btn btn&#45;&#45;small btn&#45;&#45;without-border reset-password">Przypomnij hasło</a>-->
+<!--    </div>-->
 
-    <div class="form-group form-group--buttons">
-      <a th:href="@{/register}" class="btn btn--without-border">Załóż konto</a>
-      <button class="btn" type="submit">Zaloguj się</button>
+<!--    <div class="form-group form-group&#45;&#45;buttons">-->
+<!--      <a th:href="@{/register}" class="btn btn&#45;&#45;without-border">Załóż konto</a>-->
+<!--      <button class="btn" type="submit">Zaloguj się</button>-->
+<!--    </div>-->
+<!--  </form>-->
+  <form th:action="@{/login}" method="post">
+    <div class="form-group">
+      <label for="username">Email:</label>
+      <input type="text" name="username" id="username" class="form-control" />
     </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" class="form-control" />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
 </section>
 
 <footer>
-  <div class="contact">
-    <h2>Skontaktuj się z nami</h2>
-    <h3>Formularz kontaktowy</h3>
-    <form th:action="@{/contact}" method="post" th:object="${contactForm}">
-      <div class="form-group form-group--50">
-        <input type="text" name="name" placeholder="Imię" th:field="*{name}" />
-      </div>
-      <div class="form-group form-group--50">
-        <input type="text" name="surname" placeholder="Nazwisko" th:field="*{surname}" />
-      </div>
+<!--  <div class="contact">-->
+<!--    <h2>Skontaktuj się z nami</h2>-->
+<!--    <h3>Formularz kontaktowy</h3>-->
+<!--    <form th:action="@{/contact}" method="post" th:object="${contactForm}">-->
+<!--      <div class="form-group form-group&#45;&#45;50">-->
+<!--        <input type="text" name="name" placeholder="Imię" th:field="*{name}" />-->
+<!--      </div>-->
+<!--      <div class="form-group form-group&#45;&#45;50">-->
+<!--        <input type="text" name="surname" placeholder="Nazwisko" th:field="*{surname}" />-->
+<!--      </div>-->
 
-      <div class="form-group">
-        <textarea name="message" placeholder="Wiadomość" rows="1" th:field="*{message}"></textarea>
-      </div>
+<!--      <div class="form-group">-->
+<!--        <textarea name="message" placeholder="Wiadomość" rows="1" th:field="*{message}"></textarea>-->
+<!--      </div>-->
 
-      <button class="btn" type="submit">Wyślij</button>
-    </form>
-  </div>
+<!--      <button class="btn" type="submit">Wyślij</button>-->
+<!--    </form>-->
+<!--  </div>-->
   <div class="bottom-line">
     <span class="bottom-line--copy" th:text="'Copyright &copy; ' + ${#dates.year(#dates.createNow())}">Copyright &copy; 2018</span>
     <div class="bottom-line--icons">
