--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -46,29 +46,29 @@
 </section>
 
 <footer>
-  <div class="contact">
-    <h2>Skontaktuj się z nami</h2>
-    <h3>Formularz kontaktowy</h3>
-    <form th:action="@{/contact}" method="post" th:object="${contactForm}">
-      <div class="form-group form-group--50">
-        <input type="text" name="name" placeholder="Imię" th:field="*{name}" />
-      </div>
-      <div class="form-group form-group--50">
-        <input type="text" name="surname" placeholder="Nazwisko" th:field="*{surname}" />
-      </div>
+<!--  <div class="contact">-->
+<!--    <h2>Skontaktuj się z nami</h2>-->
+<!--    <h3>Formularz kontaktowy</h3>-->
+<!--    <form th:action="@{/contact}" method="post" th:object="${contactForm}">-->
+<!--      <div class="form-group form-group&#45;&#45;50">-->
+<!--        <input type="text" name="name" placeholder="Imię" th:field="*{name}" />-->
+<!--      </div>-->
+<!--      <div class="form-group form-group&#45;&#45;50">-->
+<!--        <input type="text" name="surname" placeholder="Nazwisko" th:field="*{surname}" />-->
+<!--      </div>-->
 
-      <div class="form-group">
-            <textarea
-                    name="message"
-                    placeholder="Wiadomość"
-                    rows="1"
-                    th:field="*{message}"
-            ></textarea>
-      </div>
+<!--      <div class="form-group">-->
+<!--            <textarea-->
+<!--                    name="message"-->
+<!--                    placeholder="Wiadomość"-->
+<!--                    rows="1"-->
+<!--                    th:field="*{message}"-->
+<!--            ></textarea>-->
+<!--      </div>-->
 
-      <button class="btn" type="submit">Wyślij</button>
-    </form>
-  </div>
+<!--      <button class="btn" type="submit">Wyślij</button>-->
+<!--    </form>-->
+<!--  </div>-->
   <div class="bottom-line">
     <span class="bottom-line--copy" th:text="'Copyright &copy; ' + ${#dates.year(#dates.createNow())}">Copyright &copy; 2018</span>
     <div class="bottom-line--icons">
