--- a/src/main/resources/templates/admin_donation_form.html
+++ b/src/main/resources/templates/admin_donation_form.html
@@ -70,7 +70,7 @@
 
 <div class="container">
     <h2>Add/Edit Institution</h2>
-    <form th:action="@{/admin/donations/save}" method="post" th:object="${donation}">
+    <form th:action="@{/admin/donations/save}" method="post" th:object="${donationForm.donation}">
         <input type="hidden" th:field="*{donationId}">
 
         <div class="form-group" th:classappend="${#fields.hasErrors('user')} ? 'has-error'">
@@ -161,6 +161,18 @@
             <label for="pickUpComment">pickUpComment:</label>
             <input type="text" th:field="*{pickUpComment}" id="pickUpComment">
             <span th:if="${#fields.hasErrors('pickUpComment')}" th:errors="*{pickUpComment}"
+                  class="error-message"></span>
+        </div>
+        <div class="form-group" th:classappend="${#fields.hasErrors('creationDateTime')} ? 'has-error'">
+            <label for="creationDateTime">creationDateTime:</label>
+            <input type="text" th:field="*{creationDateTime}" id="creationDateTime" disabled>
+            <span th:if="${#fields.hasErrors('creationDateTime')}" th:errors="*{creationDateTime}"
+                  class="error-message"></span>
+        </div>
+        <div class="form-group" th:classappend="${#fields.hasErrors('updateDateTime')} ? 'has-error'">
+            <label for="pickUpComment">updateDateTime:</label>
+            <input type="text" th:field="*{updateDateTime}" id="updateDateTime" disabled>
+            <span th:if="${#fields.hasErrors('updateDateTime')}" th:errors="*{updateDateTime}"
                   class="error-message"></span>
         </div>
 
