--- a/src/main/resources/templates/admin/admin-dashboard.html
+++ b/src/main/resources/templates/admin/admin-dashboard.html
@@ -8,10 +8,10 @@
 <!--    <link rel="stylesheet" href="/css/admin-style.css"/>-->
 <!--</head>-->
 
-<div th:replace="~{admin-header :: admin-head (pageTitle='Donations')}"></div>
+<div th:replace="~{/admin/admin-header :: admin-head (pageTitle='Donations')}"></div>
 <body>
 <div class="admin-container">
-        <div th:replace="~{admin-navbar :: admin-nav}"></div>
+        <div th:replace="~{/admin/admin-navbar :: admin-nav}"></div>
 
         <main class="admin-content">
             <header class="content-header">
