--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,31 +26,19 @@
 </header>
 
 <section class="login-page">
-  <h2>Zaloguj się</h2>
-<!--  <form th:action="@{/login}" method="post" th:object="${loginForm}">-->
-<!--    <div class="form-group">-->
-<!--      <input type="email" name="email" placeholder="Email" th:field="*{email}" />-->
-<!--    </div>-->
-<!--    <div class="form-group">-->
-<!--      <input type="password" name="password" placeholder="Hasło" th:field="*{password}" />-->
-<!--      <a th:href="@{/reset-password}" class="btn btn&#45;&#45;small btn&#45;&#45;without-border reset-password">Przypomnij hasło</a>-->
-<!--    </div>-->
+  <h2>Załóż konto</h2>
+  <form th:action="@{/login}" method="post" th:object="${loginForm}">
+    <div class="form-group">
+      <input type="email" name="email" placeholder="Email" th:field="*{email}" />
+    </div>
+    <div class="form-group">
+      <input type="password" name="password" placeholder="Hasło" th:field="*{password}" />
+    </div>
 
-<!--    <div class="form-group form-group&#45;&#45;buttons">-->
-<!--      <a th:href="@{/register}" class="btn btn&#45;&#45;without-border">Załóż konto</a>-->
-<!--      <button class="btn" type="submit">Zaloguj się</button>-->
-<!--    </div>-->
-<!--  </form>-->
-  <form th:action="@{/login}" method="post">
-    <div class="form-group">
-      <label for="username">Email:</label>
-      <input type="text" name="username" id="username" class="form-control" />
+    <div class="form-group form-group--buttons">
+      <a th:href="@{/register}" class="btn btn--without-border">Załóż konto</a>
+      <button class="btn" type="submit">Zaloguj się</button>
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password" class="form-control" />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
   </form>
 </section>
 
