--- a/src/main/resources/templates/admin/admin_donations_list.html
+++ b/src/main/resources/templates/admin/admin_donations_list.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<div th:replace="~{user-header :: user-head (pageTitle='Konto użytkownika')}"></div>
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="~{/admin/admin-header :: admin-head (pageTitle='Zarzadzanie Instytucjami')}"></div>
 
 <body>
-<div th:replace="~{user-navbar :: user-nav}"></div>
-
-
+<div th:replace="~{/admin/admin-navbar :: admin-nav}"></div>
 <section>
     <h2>Lista Darów</h2>
 
+<!--    <div class="action-bar">-->
+<!--        <form th:action="@{/admin/donations}" method="get" class="search-form">-->
+<!--            <input type="text" name="search" th:value="${search}" placeholder="Szukaj daru..." class="search-input"/>-->
+<!--            <button type="submit" class="btn btn-search">Szukaj</button>-->
+<!--        </form>-->
+<!--        <a th:href="@{/admin/donations/add}" class="btn btn-add">Dodaj Dar</a>-->
+<!--    </div>-->
+
     <div>
-        <form th:action="@{/user/donations}" method="get" th:object="${filter}">
+        <form th:action="@{/admin/donations}" method="get" th:object="${filter}">
             <input type="text" name="search" th:value="${search}" placeholder="Search...">
 
             <select th:field="*{institutionId}">
@@ -22,6 +28,11 @@
             <input type="time" th:field="*{pickUpTime}" />
 
             <input type="text" th:field="*{city}" placeholder="City" />
+
+<!--            <select th:field="*{categoryIds}" multiple>-->
+<!--                <option value="" selected>All Categories</option>-->
+<!--                <option th:each="cat : ${categories}" th:value="${cat.categoryId}" th:text="${cat.name}"></option>-->
+<!--            </select>-->
 
             <div class="form-group" th:each="category : ${categories}">
                 <label>
@@ -79,11 +90,11 @@
             <td th:text="${donation.creationDateTime}"></td>
             <td th:text="${donation.updateDateTime}"></td>
             <td>
-                <a th:href="@{/user/donations/edit/{id}(id=${donation.donationId})}" class="btn btn-add">View</a>
-                <form th:action="@{/user/donations/{donationId}/updateStatus(donationId=${donation.donationId})}"
-                      th:if="${donation.status.name == 'NEW' || donation.status.name == 'READY_FOR_PICKUP'}" method="post">
-                    <button type="submit" class="btn btn-edit"
-                            th:text="${donation.status.name == 'NEW'} ? 'Ready for pickup' : 'Picked up'">
+                <a th:href="@{/admin/donations/edit/{id}(id=${donation.donationId})}" class="btn btn-edit">Edytuj</a>
+                <form th:action="@{/admin/donations/delete/{id}(id=${donation.donationId})}" method="post"
+                      style="display:inline;">
+                    <button type="submit" class="btn btn-delete"
+                            onclick="return confirm('Czy na pewno chcesz usunąć tę fundację?')">Usuń
                     </button>
                 </form>
             </td>
@@ -92,14 +103,14 @@
     </table>
 
     <div class="pagination" th:if="${totalPages > 1}">
-        <a th:href="@{/user/donations(page=${currentPage -1}, search=${search})}" th:if="${currentPage > 1}">&laquo;
+        <a th:href="@{/admin/donations(page=${currentPage -1}, search=${search})}" th:if="${currentPage > 1}">&laquo;
             Poprzednia</a>
         <span th:each="pageNumber : ${#numbers.sequence(1, totalPages)}">
-                <a th:href="@{/user/donations(page=${pageNumber}, search=${search})}"
+                <a th:href="@{/admin/donations(page=${pageNumber}, search=${search})}"
                    th:text="${pageNumber}"
                    th:class="${pageNumber==currentPage} ? 'active' : ''"></a>
             </span>
-        <a th:href="@{/user/donations(page=${currentPage + 1}, search=${search})}" th:if="${currentPage < totalPages}">Następna
+        <a th:href="@{/admin/donations(page=${currentPage + 1}, search=${search})}" th:if="${currentPage < totalPages}">Następna
             &raquo;</a>
     </div>
 </section>
