--- a/src/main/resources/templates/admin/users-list.html
+++ b/src/main/resources/templates/admin/users-list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="~{admin-header :: admin-head (pageTitle='Zarzadzanie Użytkownikami')}"></div>
+<div th:replace="~{/admin/admin-header :: admin-head (pageTitle='Zarzadzanie Użytkownikami')}"></div>
 
 <body>
-<div th:replace="~{admin-navbar :: admin-nav}"></div>
+<div th:replace="~{/admin/admin-navbar :: admin-nav}"></div>
 <section>
     <h2>Lista Użytkowników</h2>
 
