--- a/src/main/resources/templates/default/form.html
+++ b/src/main/resources/templates/default/form.html
@@ -22,11 +22,11 @@
     </ul>
 
     <ul>
-      <li><a th:href="@{/}" class="btn btn--without-border active">Start</a></li>
-      <li><a th:href="@{/#steps}" class="btn btn--without-border">O co chodzi?</a></li>
-      <li><a th:href="@{/#about-us}" class="btn btn--without-border">O nas</a></li>
-      <li><a th:href="@{/#help}" class="btn btn--without-border">Fundacje i organizacje</a></li>
-      <li><a th:href="@{/#contact}" class="btn btn--without-border">Kontakt</a></li>
+      <li><a th:href="@{/static}" class="btn btn--without-border active">Start</a></li>
+      <li><a th:href="@{/static}" class="btn btn--without-border">O co chodzi?</a></li>
+      <li><a th:href="@{/static}" class="btn btn--without-border">O nas</a></li>
+      <li><a th:href="@{/static}" class="btn btn--without-border">Fundacje i organizacje</a></li>
+      <li><a th:href="@{/static}" class="btn btn--without-border">Kontakt</a></li>
     </ul>
   </nav>
 
