--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,21 +9,7 @@
 </head>
 <body>
 <header class="header--main-page">
-  <nav class="container container--70">
-    <ul class="nav--actions">
-      <li><a th:href="@{/login}" class="btn btn--small btn--without-border">Zaloguj</a></li>
-      <li><a th:href="@{/register}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
-    </ul>
-
-    <ul>
-      <li><a th:href="@{/}" class="btn btn--without-border active">Start</a></li>
-      <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-      <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-      <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-      <li><a th:href="@{/donations/add}" class="btn btn--without-border">Przekaż dary</a></li>
-      <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
-    </ul>
-  </nav>
+  <div th:replace="~{home-navbar :: home-nav}"></div>
 
   <div class="slogan container container--90">
     <div class="slogan--item">
@@ -78,7 +64,7 @@
     </div>
   </div>
 
-  <a th:href="@{/register}" class="btn btn--large">Załóż konto</a>
+  <a sec:authorize="isAnonymous()" th:href="@{/register}" class="btn btn--large">Załóż konto</a>
 </section>
 
 <section id="about-us" class="about-us">
